--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <strong>Computational Agile Sensing and Inference for Intelligent Systems</strong><br>
                 Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/">[link]</a> <br>
                 Acquired amount: 600,000 SEK/year. Project duration: 2024-2028. <br>
-                <em>Role: Principle investigator (PI) </em>
+                <em>Role: Principal investigator (PI) </em>
             </li>
             <li>
                 <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong><br>
@@ -221,7 +221,7 @@
                 Funded within the Software Campus Program by the Federal Ministry of Education and Research (BMBF), Germany <a href="https://softwarecampus.de/certificates/18019/">[link]</a><br>
                	In cooperation with Trumpf GmbH + Co. KG as industrial partner<br>
 		Acquired amount: 100,000 EUR. Project duration: 2020-2022.<br>
-                <em>Roles: Principle investigator (PI) + Project execution in part</em><br>
+                <em>Roles: Principal investigator (PI) + Project execution in part</em><br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
