--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         2023-10: I have given a talk at the Nordic Navigation Workshop.<br>
         </li>
         <li>
-        2023-10: I have given a talk on agile sensing and intrinsics-aware inference at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen.<br>
+        2023-10: I have given a talk online at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen.<br>
         </li>
         <li>
         2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong> <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a>.<br>
@@ -472,7 +472,7 @@
             <p class="" style="margin: 5px;"></p>
             <li>
                 <strong>On Agile Sensing and Intrinsics-Aware Inference for Intelligent Systems</strong><br>
-               	October 2023, Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen<br>
+               	October 2023, Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen (virtual)<br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
