--- a/index.html
+++ b/index.html
@@ -194,11 +194,10 @@
    <h3 id="projects"> Projects </h3>
         <ul>
         <p style="text-align:justify">
-        In Sweden, I have applied for three grants of overall 850,000 EUR as PI in 2023. One of them is listed below.</p>
             <li>
                 <strong>Computational Agile Sensing and Inference for Intelligent Systems</strong><br>
                 Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/">[link]</a> <br>
-                Acquired amount: 600,000 SEK/year. Project duration: 2024-2028. <br>
+                Acquired amount: 600,000 SEK/year for 5 years. Project duration: 2024-2028. <br>
                 <em>Role: Principal investigator (PI) </em>
             </li>
             <li>
