--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
+        2023-11: I have given a talk at the University of Groningen <a href="https://www.rug.nl/research/bernoulli/calendar/colloquia/mathematics-colloquia-oriented/2023/2023/20231108-kailai-li">[link]</a>.<br>
+        </li>
+        <li>
         2023-10: I have received a <strong>ZENITH grant</strong> <a href="https://zenith.lith.liu.se/">[link]</a>.<br>
         </li>
         <li>
@@ -465,13 +468,14 @@
     <h3 id="talks">Invited Talks </h3>
         <ul>
             <li>
-                <strong>On Sensor Fusion for State Estimation in Mobile Robotics</strong><br>
-               	October 2023, Nordic Navigation Workshop<br>
+                <strong>Towards Agile Sensing for Autonomous Intelligent Systems</strong><br>
+               	Extra seminar Computer Science, Intelligent Systems<br>
+               	November 2023, Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen<br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
-                <strong>On Agile Sensing and Intrinsics-Aware Inference for Intelligent Systems</strong><br>
-               	October 2023, Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen (virtual)<br>
+                <strong>On Sensor Fusion for State Estimation in Mobile Robotics</strong><br>
+               	October 2023, Nordic Navigation Workshop<br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
