--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         </tbody>
     </table>
     <p>
+        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I am now available for faculty position.</span>
     </p>
-    
+
     <br>
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
