--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
+        2024-02: Ziyu has a paper accepted at 2024 European Control Conference (ECC) about Gaussian processes on the hypertorus <a href="https://arxiv.org/abs/2303.06799">[link]</a>. See you in Stockholm!<br>
+        </li>
+        <li>
         2023-11: I have given a talk at the University of Groningen <a href="https://www.rug.nl/research/bernoulli/calendar/colloquia/mathematics-colloquia-oriented/2023/2023/20231108-kailai-li">[link]</a>.<br>
         </li>
         <li>
@@ -244,12 +247,6 @@
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
-            <strong>Gaussian Process on the Product of Directional Manifolds</strong><br>
-            Ziyu Cao, <u>Kailai Li</u><br>
-            <em>arXiv preprint</em>, arXiv:2303.06799, 2023 <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
-        </li>
-        <p class="" style="margin: 5px;"></p>
-        <li>
             <strong>Hyperspherical Dirac Mixture Reapproximation</strong><br>
             <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>arXiv preprint</em> arXiv:2110.10411, 2021 <a href="https://arxiv.org/abs/2110.10411">[arXiv]</a>
@@ -263,6 +260,12 @@
     </ul>
     <h3 id="publications">Peer-Reviewed Publications</h3>
     <ul>
+        <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2024</strong></p>
+        <li>
+            <strong>Gaussian Process on the Product of Directional Manifolds</strong><br>
+            Ziyu Cao, <u>Kailai Li</u><br>
+            <em>2024 European Control Conference (ECC)</em> Stockholm, Sweden (to appear) <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
+        </li>
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2023</strong></p>
         <li>
             <strong> Weighted Total Least Squares for Quadratic Errors-in-Variable Regression </strong><br>
