--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <li>
             <strong>Gaussian Process on the Product of Directional Manifolds</strong><br>
             Ziyu Cao, <u>Kailai Li</u><br>
-            <em>2024 European Control Conference (ECC)</em> Stockholm, Sweden (to appear) <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
+            <em>2024 European Control Conference (ECC)</em>, Stockholm, Sweden (to appear) <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
         </li>
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2023</strong></p>
         <li>
