added webpage for CASIIS

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
         <p style="text-align:justify">
             <li>
                 <strong>Computational Agile Sensing and Inference for Intelligent Systems</strong><br>
-                Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/">[link]</a> <br>
-                Acquired amount: 600,000 SEK/year for 5 years. Project duration: 2024-2028. <br>
+                Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/projects/">[link]</a> <br>
+                Acquired amount: 600,000 SEK/year for 5 years. Project duration: 2024-2028. <a href="zenith/"> Project Page</a> <br>
                 <em>Role: Principal investigator (PI) </em>
             </li>
             <li>
