--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -66,7 +66,7 @@
         <li>Ziyu Cao (PhD Student), Electrical Engineering, Linköping University. Topic: Reliable state estimation using mutli-sensor fusion for mobile robotics.
      </ul>
 
-    <h3>Societal and industrial Relevance</h3>
+    <h3>Societal and industrial relevance</h3>
     <p style="text-align:justify"> CASIIS involves in-kind cooperations from the following organizations/companies.  
          <ul>
         <li>
