--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -11,6 +11,7 @@
 
   <meta name="author" content="CASIIS">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <!-- <body onload="startPetCursor();"> -->
@@ -38,7 +39,7 @@
     <p style="text-align:justify">Recent advancements in sensor and communication technologies have catalyzed the rapid evolution of cyber-physical systems with expanded application spectrum ranging within human, environment, society, and industry. In numerous real-world scenarios, multimodal sensors are integrated onto mobile platforms, continuously streaming uncertain observations of surrounding scenes and dynamic motions, asynchronously and at high rates. High-quality and real-time state estimation and scene perception onboard plays a fundamental role towards achieving trustworthy autonomy for intelligent systems. Leveraging 5G/6G networks, this can further enhance the digitalization of the physical world through modularized solutions for maintaining data/information flows on the edge within the context of digital twins.</p>
     <p style="text-align:justify">The classical methodologies of information fusion originated from aerospace and defense engineering practices, where research has been primarily focused on algorithmic designs. For intelligent systems nowadays, however, heterogeneity and complexity have been increasing in many aspects, such as sensory modality, platform mobility, computation resource, and application scenario. When building new sensing and inference solutions, it is crucial to adopt a holistic strategy with balanced considerations across various aspects, including sensory-specific data integration, universal data fusion schemes, and cost-effective hardware. This requires system-level and performance-oriented developments with real-world validations, such that the potential of technical solutions can be adequately demonstrated.</p>
       
-    <h3>Project Description</h3>
+    <h3>Project description</h3>
     <p style="text-align:justify">The project aims to systematically advance computational sensing and inference for achieving high-performance and safe autonomy of intelligent systems. The primary focuses are to propose intrinsics-aware methodologies for modeling uncertain motion dynamics and based thereon, to develop agile and trustworthy frameworks for autonomous state estimation and perception using multimodal sensors. We also investigate corresponding planning and control policies towards building up a self-consistent sensing-actuation paradigm. During project execution, cutting-edge sensing technologies are to be incorporated, and we emphasize system-level developments w.r.t. real-world scenarios. The project is expected to make substantial contributions to research and teaching in robotics, computer science and information engineering, meanwhile delivering reliable and cost-effective solutions to intelligent automation in the context of digital twins for industry and public service. The project is composed of the following work packages. </p>
      <ul>
         <li>
