--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         2023-11: I have given a talk at the University of Groningen <a href="https://www.rug.nl/research/bernoulli/calendar/colloquia/mathematics-colloquia-oriented/2023/2023/20231108-kailai-li">[link]</a>.<br>
         </li>
         <li>
-        2023-10: I have received a <strong>ZENITH grant</strong> <a href="https://zenith.lith.liu.se/projects/">[link]</a>. See also our <a href="zenith-casiis/"> Project Page</a>.<br>
+        2023-10: I have received a <strong>ZENITH grant</strong> <a href="https://zenith.lith.liu.se/projects/">[link]</a>. Check out our <a href="zenith-casiis/"> project page</a>.<br>
         </li>
         <li>
         2023-10: I have given a talk at the Nordic Navigation Workshop.<br>
