--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -64,7 +64,8 @@
         <p class=""style="margin:5px;"></p>
         <li>Kailai Li (PI), Department of Electrical Engineering, Linköping University<br>
         <p class=""style="margin:5px;"></p>
-        <li>Ziyu Cao (PhD Student), Electrical Engineering, Linköping University. Topic: Reliable state estimation using mutli-sensor fusion for mobile robotics.
+        <li>Ziyu Cao (PhD student), Electrical Engineering, Linköping University<br>
+        Topic: Reliable state estimation using mutli-sensor fusion for mobile robotics.
      </ul>
 
     <h3>Societal and industrial relevance</h3>
