--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -19,7 +19,7 @@
     <tr style="padding:0">
     <td style="padding:0">
     <h2>Computational Agile Sensing and Inference for Intelligent Systems (CASIIS)</h2>
-      PI: <a href="https://kailaili.github.io/">Kailai Li</a>, Department of Electrical Engineering, Linköping University.
+    <strong>PI:</strong> <a href="https://kailaili.github.io/">Kailai Li</a>, Department of Electrical Engineering, Linköping University.
     </p>
     <br>
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
@@ -67,7 +67,7 @@
         <li>Ziyu Cao (PhD student), Electrical Engineering, Linköping University<br>
         Topic: Reliable state estimation using mutli-sensor fusion for mobile robotics.
      </ul>
-
+    <hr>
     <h3>Societal and industrial relevance</h3>
     <p style="text-align:justify"> CASIIS involves in-kind cooperations from the following organizations/companies.  
          <ul>
