--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -11,7 +11,7 @@
 
   <meta name="author" content="CASIIS">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet_casiis.css">
 </head>
 
 <!-- <body onload="startPetCursor();"> -->
