--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -28,7 +28,7 @@
         2024-03: Project webpage is now set up. All project progress will be reported here! <br>
         </li>
         <li>
-        2024-01: Ziyu Cao (PhD student at Electrical Engineering, Linköping University) has joined the project. She works on reliable state estimation using mutli-sensor fusion for mobile robotics.<br>
+        2024-01: Ziyu Cao (PhD student at the Department of Electrical Engineering, Linköping University) has joined the project. She works on reliable state estimation using mutli-sensor fusion for mobile robotics.<br>
         </li>
         <li>
         2023-11: The project CASIIS has been approved by the Faculty of Science and Engineering of Linköping University for a grant of 600 KSEK/year for a total of 5 years <a href="https://zenith.lith.liu.se/projects/">[link]</a>.<br>
@@ -64,7 +64,7 @@
         <p class=""style="margin:5px;"></p>
         <li>Kailai Li (PI), Department of Electrical Engineering, Linköping University<br>
         <p class=""style="margin:5px;"></p>
-        <li>Ziyu Cao (PhD student), Electrical Engineering, Linköping University<br>
+        <li>Ziyu Cao (PhD student), Department of Electrical Engineering, Linköping University<br>
         Topic: Reliable state estimation using mutli-sensor fusion for mobile robotics.
      </ul>
     <hr>
