--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <ul>
         <li>@ Linköping University (ongoing)</li>
         <ul>
-            <li>Ziyu Cao (PhD student, co-supervised with Fredrik Gustafsson) </li>
+            <li><a href="https://https://ateapot649.github.io/">Ziyu Cao</a> (PhD student, co-supervised with Fredrik Gustafsson) </li>
             <li>Peng Liu (PhD student, co-supervised with Fredrik Gustafsson) </li>
             <p class=""style="margin:2px;"></p>
             <li>Elias William (master's student) </li>
