--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -62,9 +62,9 @@
     <h3>Project members</h3>
      <ul>
         <p class=""style="margin:5px;"></p>
-        <li>Kailai Li (PI), Department of Electrical Engineering, Linköping University<br>
+        <li><a href="https://kailaili.github.io/">Kailai Li</a> (PI), Department of Electrical Engineering, Linköping University<br>
         <p class=""style="margin:5px;"></p>
-        <li>Ziyu Cao (PhD student), Department of Electrical Engineering, Linköping University<br>
+        <li><a href="https://https://ateapot649.github.io/">Ziyu Cao</a> (PhD student), Department of Electrical Engineering, Linköping University<br>
         Topic: Reliable state estimation using mutli-sensor fusion for mobile robotics.
      </ul>
     <hr>
