--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </p>
 
     <br>
-   <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
+   <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
         2024-02: Ziyu has a paper accepted at 2024 European Control Conference (ECC) about Gaussian processes on the hypertorus <a href="https://arxiv.org/abs/2303.06799">[link]</a>. See you in Stockholm!<br>
@@ -75,7 +75,7 @@
         2023-06: Our paper '' Continuous-Time Ultra-Wideband-Inertial Fusion'' has been published on RA-L. We have presented the first systematic sensor fusion framework using quaternion-based cumulative B-splines. Check out our code here <a href="https://github.com/KIT-ISAS/SFUISE">[GitHub]</a>.<br>
         </li>
 </ul>
-   <span style="color:darkblue;font-size:15px;font-weight:bold;">==========</span>
+   <span style="color:darkgreen;font-size:15px;font-weight:bold;">==========</span>
 
     
     <h3>Short Bio</h3>
