--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -64,7 +64,7 @@
         <p class=""style="margin:5px;"></p>
         <li><a href="https://kailaili.github.io/">Kailai Li</a> (PI), Department of Electrical Engineering, Linköping University<br>
         <p class=""style="margin:5px;"></p>
-        <li><a href="https://https://ateapot649.github.io/">Ziyu Cao</a> (PhD student), Department of Electrical Engineering, Linköping University<br>
+        <li><a href="https://ateapot649.github.io/">Ziyu Cao</a> (PhD student), Department of Electrical Engineering, Linköping University<br>
         Topic: Reliable state estimation using mutli-sensor fusion for mobile robotics.
      </ul>
     <hr>
