--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>        
     	<li>
-        2024-02/03: I have received a job offer from <strong>TU Delft</strong> as assistant professor (academic career track), and I declined it.<br>
+        2024-02/03: I have received a job offer from <strong>TU Delft</strong> as assistant professor (academic career track), and I have <strong>declined</strong> it.<br>
         </li>
         <li>
         2024-02: Ziyu has a paper accepted at 2024 European Control Conference (ECC) about Gaussian processes on the hypertorus <a href="https://arxiv.org/abs/2303.06799">[link]</a>. See you in Stockholm!<br>
