--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 
     <br>
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
-    <ul>        
+    <ul>      
+      	<li>
+        2024-03: I received a job offer from <strong>Linköping University</strong> as assistant professor (tenure track) at the Department of Electrical Engineering, and I <strong>declined</strong> it.<br>
+        </li>  
     	<li>
         2024-02/03: I received a job offer from <strong>TU Delft</strong> as assistant professor (academic career track) at the Faculty of Mechanical Engineering, and I <strong>declined</strong> it.<br>
         </li>
@@ -155,11 +158,19 @@
         <ul>
         <p style="text-align:justify">
             <li>
+                <strong>Cybersecurity with Focus on Realiable Sensing and Autonomy </strong><br>
+                Subject area including 1 Asst. Prof, 2 PhD students and 2 postdocs funded by WASP, Sweden <a href="https://wasp-sweden.org/">[link]</a> <br>
+                Acquired amount: about 20M SEK in total.</a> <br>
+                <em>Role: Principal investigator (PI)</em> <span style="color:darkviolet;font-weight:bold;">Declined</span>
+            </li>
+            <p class="" style="margin: 5px;"></p>
+            <li>
                 <strong>Computational Agile Sensing and Inference for Intelligent Systems</strong><br>
                 Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/projects/">[link]</a> <br>
                 Acquired amount: 600,000 SEK/year for 5 years. Project duration: 2024-2028. <a href="zenith-casiis/"> [Project Page]</a> <br>
                 <em>Role: Principal investigator (PI) </em>
             </li>
+            <p class="" style="margin: 5px;"></p>
             <li>
                 <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong><br>
                 Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/458747635?language=en">[link]</a> <br>
