--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
         </tbody>
     </table>
     <p>
-        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I am now available for faculty position.</span>
+        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I will be joining the Department of Computer Science at Bernoulli Institute, University of Groningen in May 2024.</span>
     </p>
 
     <br>
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
-    <ul>      
+    <ul>   
+        <li>
+        2024-03: I received a job offer from the <strong>University of Groningen</strong> as tenure-track assistant professor at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence. I <span style="color:darkviolet;font-size:15px;font-weight:bold;">accepted</span> this offer.<br>
+        </li>    
       	<li>
         2024-03: I received a job offer from <strong>Linköping University</strong> as assistant professor (tenure track) at the Department of Electrical Engineering, and I <strong>declined</strong> it.<br>
         </li>  
