--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <tbody>
             <tr style="padding:0">
                 <td style="width:60%;vertical-align:middle">
+                    <br>
                     <h2>Kailai Li</h2>
                     <p><span style="color:black;font-size:15px;"> Department of Electrical Engineering, Linköping University, Sweden</span></p>
                     <p><span style="color:black;font-size:15px;"> Contact: kailai.li [at] liu [dot] se</span></p>
@@ -44,7 +45,7 @@
         </tbody>
     </table>
     <p>
-        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I will be joining the Department of Computer Science at Bernoulli Institute, University of Groningen in May 2024.</span>
+        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I will be joining the Department of Computer Science at Bernoulli Institute, University of Groningen, the Netherlands in May 2024.</span>
     </p>
 
     <br>
