--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </tbody>
     </table>
     <p>
-        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I will be joining the Department of Computer Science at Bernoulli Institute, University of Groningen, the Netherlands in May 2024.</span>
+        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as an tenure-track assistant professor in May 2024.</span>
     </p>
 
     <br>
