--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         </tbody>
     </table>
     <p>
-        <span style="color:darkviolet;font-size:15px;font-weight:bold;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as an tenure-track assistant professor in May 2024.</span>
+     <br>
+        <span style="color:darkblue;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="color:darkviolet;font-size:15px;font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
     </p>
-
     <br>
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>   
