--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </table>
     <p>
      <br>
-        <span style="color:darkblue;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="color:darkblue;font-size:15px;font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
+        <span style="color:darkblue;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
     </p>
     <br>
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
