--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         2024-03: I received a job offer from the <strong>University of Groningen</strong> as tenure-track assistant professor at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence. I <span style="color:darkviolet;font-size:15px;font-weight:bold;">accepted</span> this offer.<br>
         </li>    
       	<li>
-        2024-03: I received a job offer from <strong>Linköping University</strong> as assistant professor (tenure track) at the Department of Electrical Engineering, and I <strong>declined</strong> it.<br>
+        2024-03: I received a job offer from <strong>Linköping University</strong> as assistant professor (tenure track) at the Department of Electrical Engineering funded by WASP (see <a href="#projects">below</a>), and I <strong>declined</strong> it. <br>
         </li>  
     	<li>
-        2024-02/03: I received a job offer from <strong>TU Delft</strong> as assistant professor (academic career track) at the Faculty of Mechanical Engineering, and I <strong>declined</strong> it.<br>
+        2024-02/03: I received a job offer from <strong>TU Delft</strong> as assistant professor (academic career track) at the Faculty of Mechanical Engineering. I <strong>declined</strong> it.<br>
         </li>
         <li>
         2024-02: Ziyu has a paper accepted at 2024 European Control Conference (ECC) about Gaussian processes on the hypertorus <a href="https://arxiv.org/abs/2303.06799">[link]</a>. See you in Stockholm!<br>
@@ -164,7 +164,7 @@
             <li>
                 <strong>Cybersecurity with Focus on Realiable Sensing and Autonomy </strong><br>
                 Subject area including 1 Asst. Prof, 2 PhD students and 2 postdocs funded by WASP, Sweden <a href="https://wasp-sweden.org/">[link]</a> <br>
-                Acquired amount: about 20M SEK in total.</a> <br>
+                Acquired amount: about 20M SEK in total.</a> Project duration: 2024-2028 <br>
                 <em>Role: Principal investigator (PI)</em> <span style="color:darkviolet;font-weight:bold;">Declined</span>
             </li>
             <p class="" style="margin: 5px;"></p>
