--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </ul>
     <hr>
     
-    <h3 id="projects"> Projects </h3>
+    <h3 id="projects"> Granted Projects </h3>
         <ul>
         <p style="text-align:justify">
             <li>
