--- a/zenith-casiis/index.html
+++ b/zenith-casiis/index.html
@@ -25,6 +25,9 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
+        2024-03: We will present our paper about Gaussian processes on the hypertorus <a href="https://arxiv.org/abs/2303.06799">[link]</a> at 2024 European Control Conference (ECC) in Stockholm in June.<br>
+        </li>
+        <li>
         2024-03: Project webpage is now set up. All project progress will be reported here! <br>
         </li>
         <li>
