--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@
     </table>
     <p>
      <br>
-        <span style="color:darkblue;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
+        <span style="color:darkred;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
+        </p>
+        <span style="color:darkblue;font-size:15px;">I lead the <span style="font-weight:bold;">Agile Sensing and Intelligence Group (ASIG)</span> <a href="https://github.com/ASIG-X"></a> working in the field of autonomous systems and robotics. We constantly look for strong candidates for PhD/postdoc/internship/thesis. Shoot me an email with a brief intro if you are interested, and we will start from this!</span>
     </p>
     <br>
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
-    <ul>   
+    <ul>
+        <li>
+        2024-04: We have now launched an orgnization account on Github for our group under <a href="https://github.com/ASIG-X">ASIG-X</a>.  Our future opensource projects will be released here exclusively. Stay tuned!<br>
+        </li>    
         <li>
         2024-03: I received a job offer from the <strong>University of Groningen</strong> as tenure-track assistant professor at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence. I <span style="color:darkviolet;font-size:15px;font-weight:bold;">accepted</span> this offer.<br>
         </li>    
@@ -82,7 +87,7 @@
         2023-07: Check out my new manuscript on embedding B-splines in recursive state estimation <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>.<br>
         </li>
         <li>
-        2023-06: Our paper '' Continuous-Time Ultra-Wideband-Inertial Fusion'' has been published on RA-L. We have presented the first systematic sensor fusion framework using quaternion-based cumulative B-splines. Check out our code here <a href="https://github.com/KIT-ISAS/SFUISE">[GitHub]</a>.<br>
+        2023-06: Our paper '' Continuous-Time Ultra-Wideband-Inertial Fusion'' has been published on RA-L. We have presented the first systematic sensor fusion framework using quaternion-based cumulative B-splines. Check out our code here <a href="https://github.com/ASIG-X/SFUISE">[GitHub]</a>.<br>
         </li>
 </ul>
 <br>
@@ -99,7 +104,7 @@
     <h3>Research Profile</h3>
     <p style="text-align:justify">
         My major research interests lie in agile sensing and trustworthy inference in the general domain of understanding physical and cyber-physical systems, with applications to sensor fusion, robotic perception, and learning dynamical systems. I am also interested in developing planning and control methods for uncertain dynamical systems and have the ambition to methodologically unify these aspects through new representations and models with real-world validation. I had the honor to lead the developments of a few open-source real-world robotic systems, including <a href="https://github.com/KIT-ISAS/lili-om">LiLi-OM</a>, a cross-hardware LiDAR-inertial odometry and mapping system,
-        and <a href="https://github.com/KIT-ISAS/SFUISE">SFUISE</a>, a continuous-time UWB-inertial state estimation system. Please refer to the lists of <a href="#papers">papers</a> and <a href="#talks">talks</a> below for more information.
+        and <a href="https://github.com/ASIG-X/SFUISE">SFUISE</a>, a continuous-time UWB-inertial state estimation system. Please refer to the lists of <a href="#papers">papers</a> and <a href="#talks">talks</a> below for more information.
     </p>
     <p style="text-align:justify">
         Over the years, I have been very lucky to cooperate with many students as a <a href="#teaching">teacher</a> and <a href="#supervision">supervisor</a>.
@@ -295,7 +300,7 @@
         <li>
             <strong> Continuous-Time Ultra-Wideband-Inertial Fusion </strong><br>
             <u>Kailai Li</u>, Ziyu Cao, Uwe D Hanebeck <br>
-            <em>IEEE Robotics and Automation Letters</em>, vol. 8, no. 7, pp. 4338-4345, July 2023 <a href="https://arxiv.org/abs/2301.09033">[arXiv]</a> <a href="https://doi.org/10.1109/LRA.2023.3281932">[IEEE]</a> <a href="https://www.youtube.com/watch?v=v9bbcskwPnw">[video]</a> <a href="https://github.com/KIT-ISAS/SFUISE">[code and data]</a>
+            <em>IEEE Robotics and Automation Letters</em>, vol. 8, no. 7, pp. 4338-4345, July 2023 <a href="https://arxiv.org/abs/2301.09033">[arXiv]</a> <a href="https://doi.org/10.1109/LRA.2023.3281932">[IEEE]</a> <a href="https://www.youtube.com/watch?v=v9bbcskwPnw">[video]</a> <a href="https://github.com/ASIG-X/SFUISE">[code and data]</a>
         </li>
 
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2022</strong></p>
