--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </table>
     <p>
      <br>
-        <span style="color:darkred;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
+        <span style="color:darkblue;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
         </p>
         <span style="color:darkblue;font-size:15px;">I lead the <span style="font-weight:bold;">Agile Sensing and Intelligence Group (ASIG)</span> <a href="https://github.com/ASIG-X"></a> working in the field of autonomous systems and robotics. We constantly look for strong candidates for PhD/postdoc/internship/thesis. Shoot me an email with a brief intro if you are interested, and we will start from this!</span>
     </p>
