--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
-        2024-04: We have now launched an orgnization account on Github for our group under <a href="https://github.com/ASIG-X">ASIG-X</a>.  Our future opensource projects will be released here exclusively. Stay tuned!<br>
+        2024-04: We have now launched our group account on Github under <a href="https://github.com/ASIG-X">ASIG-X</a>.  Our future opensource projects will be released here exclusively. Stay tuned!<br>
         </li>    
         <li>
         2024-03: I received a job offer from the <strong>University of Groningen</strong> as tenure-track assistant professor at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence. I <span style="color:darkviolet;font-size:15px;font-weight:bold;">accepted</span> this offer.<br>
