--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                         <a href="https://www.linkedin.com/in/kailai-li-294657b7">LinkedIn</a> &nbsp|&nbsp
                         <a href="https://orcid.org/0000-0002-2368-3217">ORCID</a> &nbsp|&nbsp
                         <a href="https://twitter.com/kailaili1">Twitter</a> &nbsp|&nbsp
-                        <a href="https://www.researchgate.net/profile/Kailai-Li">ResearchGate</a>
+                        <a href="https://www.researchgate.net/profile/Kailai-Li">ResearchGate</a>&nbsp|&nbsp
+                        <a href="https://github.com/ASIG-X">ASIG-X</a>
                         </span>
                     </p>
                 </td>
