--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <strong>Cybersecurity with Focus on Realiable Sensing and Autonomy </strong><br>
                 Subject area including 1 Asst. Prof, 2 PhD students and 2 postdocs funded by WASP, Sweden <a href="https://wasp-sweden.org/">[link]</a> <br>
                 Acquired amount: about 20M SEK in total.</a> Project duration: 2024-2028 <br>
-                <em>Role: Principal investigator (PI)</em> <span style="color:darkviolet;font-weight:bold;">Declined</span>
+                <em>Role: Principal investigator (PI)</em> <span style="color:darkviolet;font-weight:bold;">Granted but declined by me</span>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
