--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
                 <strong>Cybersecurity with Focus on Realiable Sensing and Autonomy </strong><br>
                 Subject area including 1 Asst. Prof, 2 PhD students and 2 postdocs funded by WASP, Sweden <a href="https://wasp-sweden.org/">[link]</a> <br>
                 Acquired amount: about 20M SEK in total.</a> Project duration: 2024-2028 <br>
-                <em>Role: Principal investigator (PI)</em> <span style="color:darkviolet;font-weight:bold;">Granted but declined by me</span>
+                <em>Role: Principal investigator (PI) and author of the proposal</em> <span style="color:darkviolet;font-weight:bold;">Granted but declined by me</span>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
                 <strong>Computational Agile Sensing and Inference for Intelligent Systems</strong><br>
                 Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/projects/">[link]</a> <br>
                 Acquired amount: 600,000 SEK/year for 5 years. Project duration: 2024-2028. <a href="zenith-casiis/"> [Project Page]</a> <br>
-                <em>Role: Principal investigator (PI) </em>
+                <em>Role: Principal investigator (PI) and author of the proposal </em>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
