--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                 <td style="width:60%;vertical-align:middle">
                     <br>
                     <h2>Kailai Li</h2>
-                    <p><span style="color:black;font-size:15px;"> Department of Electrical Engineering, Linköping University, Sweden</span></p>
-                    <p><span style="color:black;font-size:15px;"> Contact: kailai.li [at] liu [dot] se</span></p>
+                    <p><span style="color:black;font-size:15px;">Assistant Professor at Department of Computer Science</span></p>
+                    <p><span style="color:black;font-size:15px;">Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence</span></p>
+                    <p><span style="color:black;font-size:15px;">University of Groningen, The Netherlands</span></p>
+                    <p><span style="color:black;font-size:15px;"> Contact: kailai.li [at] rug [dot] nl</span></p>
                     <p><span style="font-weight:bold;">
                         <a href="https://scholar.google.com/citations?user=6ehGZ2sAAAAJ&hl">Google Scholar</a> &nbsp|&nbsp
                         <a href="https://github.com/kailaili">GitHub</a> &nbsp|&nbsp
@@ -47,8 +49,6 @@
     </table>
     <p>
      <br>
-        <span style="color:darkblue;font-size:15px;">I will be joining the Department of Computer Science at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, <br> University of Groningen (NL) as <span style="font-weight:bold;">tenure-track assistant professor</span> in May 2024.</span>
-        </p>
         <span style="color:darkblue;font-size:15px;">I lead the <span style="color:darkred;font-weight:bold;">Agile Sensing and Intelligence Group <a href="https://asig-x.github.io/">(ASIG)</a></span> working in the field of autonomous systems and robotics. We constantly look for strong candidates for PhD/postdoc/internship/thesis. Shoot me an email with a brief intro if you are interested, and we will start from this!</span>
     </p>
     <br>
@@ -95,10 +95,9 @@
 
     
     <h3>Short Bio</h3>
-    <p style="text-align:justify">I am a postdoctoral fellow working at the Department of Electrical Engineering in collaboration with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at <a href="https://liu.se">Linköping University (LiU) </a>
-        in Sweden from October 2022. I was a postdoctoral researcher at the <a href="https://isas.iar.kit.edu">Intelligent Sensor-Actuator-Systems (ISAS) Lab</a>, Institute for Anthropomatics and Robotics,
-        <a href="https://kit.edu">Karlsruhe Institute of Technology (KIT)</a> in Germany, where I obtained my PhD degree in computer science in December 2021 under the supervision of <a href="https://isas.iar.kit.edu/Staff_Hanebeck.php">Uwe D. Hanebeck</a>.
-        Previously, I received my master's degree in Automation Engineering in 2017 from <a href="https://www.rwth-aachen.de">RWTH Aachen University</a> in Germany, including a master's thesis completed at <a href="https://eth.ch"> ETH Zurich </a> in Switzerland,
+    <p style="text-align:justify">I am assitant professor working at the Department of Computer Science at the University of Groningen in the Netherlands. I also collaborate closely with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at Department of Electrical Engineering of <a href="https://liu.se">Linköping University (LiU) </a>
+        in Sweden, where I was a postdoctoral researcher from 2022-10 to 2024-04. Previously, I was a postdoctoral researcher at the <a href="https://isas.iar.kit.edu">Intelligent Sensor-Actuator-Systems (ISAS) Lab</a>, Institute for Anthropomatics and Robotics,
+        <a href="https://kit.edu">Karlsruhe Institute of Technology (KIT)</a> in Germany, where I obtained my PhD degree in computer science in 2021 under the supervision of <a href="https://isas.iar.kit.edu/Staff_Hanebeck.php">Uwe D. Hanebeck</a>. I received my master's degree in Automation Engineering in 2017 from <a href="https://www.rwth-aachen.de">RWTH Aachen University</a> in Germany, including a master's thesis completed at <a href="https://eth.ch"> ETH Zurich </a> in Switzerland,
         and my bachelor's degrees in 2014 from <a href="https://www.tsinghua.edu.cn/en"> Tsinghua University</a> (<a href="https://en.wikipedia.org/wiki/Tsinghua_University">Wikipedia</a>) in China.</p>
     <hr>
 
