--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
-        2024-05: One PhD position is available in <span style="font-weight:bold;"><a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">Multisensory Autonomy for Intelligent Mobile Systems</a></span>. Application is due on 01-June, 2024.<br>
+        2024-05: One PhD position is available in <a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">Multisensory Autonomy for Intelligent Mobile Systems</a>. Application is due on 01-June, 2024.<br>
         </li>
         <li>
         2024-04: We have now launched our group account on Github under <a href="https://github.com/ASIG-X">ASIG-X</a>.  Our future opensource projects will be released here exclusively. Stay tuned!<br>
