--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <p><span style="color:black;font-size:15px;">University of Groningen, The Netherlands</span></p>
                     <p><span style="color:black;font-size:15px;"> Contact: kailai.li [at] rug [dot] nl</span></p>
                     <p><span style="font-weight:bold;">
+                        <a href="https://www.rug.nl/staff/kailai.li/">RUG Page</a> &nbsp|&nbsp
                         <a href="https://scholar.google.com/citations?user=6ehGZ2sAAAAJ&hl">Google Scholar</a> &nbsp|&nbsp
                         <a href="https://github.com/kailaili">GitHub</a> &nbsp|&nbsp
                         <a href="https://www.linkedin.com/in/kailai-li-294657b7">LinkedIn</a> &nbsp|&nbsp
